# mkite_core

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  requirements.txt
mkite_core/cli/: kite.py  runner.py
mkite_core/models/: __init__.py  base.py  calcs.py  formula.py  jobs.py  mols.py  status.py  structs.py
mkite_core/models/tests/: test_jobs.py  test_mols.py  test_structs.py
mkite_core/plugins/: __init__.py  loader.py
mkite_core/recipes/: __init__.py  base.py  chain.py  errors.py  options.py  parser.py  pipes.py  recipe.py  runner.py  settings.py
mkite_core/recipes/tests/: test_base.py  test_chain.py  test_options.py  test_parser.py  test_recipe.py  test_runner.py  test_settings.py
mkite_core/tests/: tempdirs.py
mkite_core/tests/files/: POSCAR  jobinfo.json  tea.sdf
mkite_core/tests/files/models/: conformer.json  crystal.json  molecule.json  projecteddos.json
