[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mkite_core"
version = "24.09.05"
description = "distributed computing for high-throughput materials simulation"
authors = [{name = "Daniel Schwalbe-Koda", email = "dskoda@ucla.edu"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["workflow", "materials-science"]
dependencies = [
    "msgspec >= 0.14.1",
    "click",
    "pydantic>=2.0",
    "ase",
    "pymatgen",
    "rdkit",
]

[project.urls]
Homepage = "https://github.com/mkite-group"

[project.scripts]
kite = "mkite_core.cli.kite:kite"

[tool.setuptools]
packages = ["mkite_core"]
